- Should be working again from the new layout change to Fakku.

// Version 0.3.1
- Left something commented that shouldn't have been...

// Version 0.3.2
- Improved the way the extension loads in new notes(it should now load all old ones before beginning any new notes that will take longer to load).

// Version 0.3.3
- Renamed extension to F! Companion
- Minor fixes to when a manga did not exist.

// Version 0.3.4
- Quick fix to notifications not loading when certain characters where not filtered properly.

// Version 0.4.0 (Un-released)
- The icon will now say "DL or "Link", depending on what option you have set, when it is the action that will be taken when pressed.
- Fixed an issue with removed(actually hidden...) items causing issues when loading in newer items at the top.
- Added "endless" scrolling to the notifications, which means that it will now load older entries as you reach the bottom of the page.
- Started storing the generated html page in localstorage which means it will now load close to instantanious as it will no longer have to generate new entries from stored data at every load.
- The menu will now always be shown at the top even when scrolling.
- Added filtering the notifications.(Currently only works for tags)
- Fixed an issue where the loadingtrail would stick around when an error loading a manga occured. (Hopefully for good this time...)
- Fixed the "dark skin" and "monster girl" tags not appearing properly nor linking properly
- The popups from clicking things like download or remove will now go away after a period of time rather than only when clicking somewhere else.
- Added tooltips to tags. (Might redo these using something like jqueryui as it would give me more control over the styling.)
- Updated to make use of the Fakku API for most things, making the loading of new mangas quite a bit faster.
- Time will now be updated internally for when a manga was uploaded.