@@ -9,7 +9,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   </head>
   <body>
-	<div id="content" style="max-width:800px; width:545px; height:600px">
+	<div id="content" style="max-width:800px;">
 		<div id="menu">
 			<div class="left">
 				<a id="refresh" href="#">Refresh Notifications</a> | 
