@@ -1,16 +1,13 @@
-body {
+body 
+{
 font-family:Arial, "Helvetica Neue", Helvetica, sans-serif;
 font-size: 13px;
 }
 a {
   text-decoration: none;
 }
-#changelog {
-  float: right;
-  position: relative;
-  top: 10px;
-}
-#content {
+#content 
+{
   float:left;
   margin: 5px;
   padding: 10px 25px 15px 0px;
@@ -25,62 +22,77 @@ a {
 							  color-stop(0, rgb(241, 241, 241)), 
 							  color-stop(1, rgb(255, 255, 255)));
 }
-#status {
+#status 
+{
   margin-top: 10px;
 }
-#fileName {
+#fileName 
+{
   margin-top: 8px;
   margin-left: 8px;
 }
-#left {
+#left 
+{
   vertical-align: top;
   display: inline-block;
 }
-#right {
+#right 
+{
   vertical-align: top;
   display: inline-block;
 }
-.mainDiv {
+.mainDiv 
+{
   padding: 0px 0px 0px 0px;
   margin: 0px 2px 0px 8px;
   text-align: right;
   height: 24px;
   line-height: 22px;
 }
-.dropdown {
+.dropdown 
+{
   height: 24px;
 }
-.dropdown select {
+.dropdown select 
+{
   width: 110px;
   height: 20px;
 }
-.dropdown button {
+.dropdown button 
+{
   height: 20px;
   width: 40px;
   padding: 0px;
 }
-.checkbox{
+.checkbox
+{
   height: 24px;
 }
-.checkbox input[type="checkbox"] {
+.checkbox input[type="checkbox"] 
+{
   margin: 5px 3px 3px 0px;
 }
-.textbox{
+.textbox
+{
   margin: 0 0 2px 0;
 }
-.textbox input[type="number"] {
+.textbox input[type="number"] 
+{
   width: 25px;
   padding: 0px;
   text-align: center;
 }
 input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
+input[type=number]::-webkit-outer-spin-button 
+{
     -webkit-appearance: none;
     margin: 0;
 }
+
 /* Style for draggable elements */
 /* Prevent the text contents of draggable elements from being selectable. */
-[draggable] {
+[draggable] 
+{
   -moz-user-select: none;
   -khtml-user-select: none;
   -webkit-user-select: none;
@@ -89,10 +101,12 @@ input[type=number]::-webkit-outer-spin-button {
   -khtml-user-drag: element;
   -webkit-user-drag: element;
 }
-#fileColumns {
+#fileColumns 
+{
   height:36px;
 }
-.column {
+.column 
+{
   height: 23px;
   width: 100px;
   border: 2px solid #BDBDBD;
@@ -116,11 +130,13 @@ input[type=number]::-webkit-outer-spin-button {
   vertical-align: top;
   display: inline-block;
 }
-.save {
+.save 
+{
  margin-left: 8px;
  margin-bottom: 5px;
 }
-#removeColumn {
+#removeColumn 
+{
   position: relative;
   top: -2px;
   left: 4px;
@@ -140,14 +156,16 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-user-select: none;
   user-select: none;
 }
-#removeColumn.over {
+#removeColumn.over 
+{
   opacity: 0.75;
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
   -ms-transform: scale(1.1);
   -o-transform: scale(1.1);
 }
-.column.notallowed {
+.column.notallowed 
+{
   cursor: not-allowed;
   opacity: 0.75;
   -webkit-transform: scale(1);
@@ -155,17 +173,99 @@ input[type=number]::-webkit-outer-spin-button {
   -ms-transform: scale(1);
   -o-transform: scale(1);
 }
-.column.over {
+.column.over 
+{
   opacity: 0.75;
   -webkit-transform: scale(0.95);
   -moz-transform: scale(0.95);
   -ms-transform: scale(0.95);
   -o-transform: scale(0.95);
 }
-.column.moving{
+.column.moving
+{
   opacity: 0.25;
   -webkit-transform: scale(0.85);
   -moz-transform: scale(0.85);
   -ms-transform: scale(0.85);
   -o-transform: scale(0.85);
+}
+
+/*----- Tabs -----*/
+.tabs 
+{
+  width: 100%;
+  margin-top: -4px;
+  display: inline-block;
+}
+
+/*----- Tab Links -----*/
+/* Clearfix */
+.tab-links
+{
+  margin: 0px 0px 0px 2px;
+  -webkit-padding-start: 0px;
+}
+.tab-links:after 
+{
+  display: block;
+  clear: both;
+  content:'';
+}
+.tab-links li 
+{
+  margin: 0px 2px;
+  float: left;
+  list-style: none;
+}
+.tab-links a
+{
+  padding: 9px 15px;
+  display: inline-block;
+  border-radius: 6px 6px 0px 0px;
+  background: #DADADA;
+  font-size: 13px;
+  color: #4c4c4c;
+  transition: all linear 0.15s;
+}
+.tab-links a:hover {
+  background: #E5E5E5;
+  text-decoration: none;
+}
+li.active a, li.active a:hover
+{
+  background: #fff;
+  color: #4c4c4c;
+}
+
+/*----- Content of Tabs -----*/
+.tab-content
+{
+  padding: 10px 15px 15px 5px;
+  margin: 0px -23px 0px 2px;
+  box-shadow: 0px 1px 0px rgba(0,0,0,0.15);
+  background: #fff;
+  max-height: 75%;
+  overflow-y: auto;
+}
+.tab
+{
+  display: none;
+}
+.tab.active
+{
+  display: block;
+}
+#changelog
+{
+  padding-left: 15px;
+  margin-top: -5px;
+}
+
+/* Version CSS */
+p .version
+{
+  display: block;
+  font-size: 15px;
+  text-decoration: underline;
+  margin-bottom: -12px;
 }
