@@ -15,9 +15,7 @@ var alertCheck = new Boolean();
 			// Fakku Notifications
 				var select = document.getElementById("fakkunotes");
 				// Message to enable/disable recursive function
-					chrome.runtime.sendMessage({msg: "GrabNotes"}, function(response) {
-						//console.log("Updated Notifications");
-					});
+					chrome.runtime.sendMessage({msg: "GrabNotes"});
 				localStorage["fakku_notes"] = select.checked;
 
 			// Update Interval
@@ -157,5 +155,40 @@ var fileChild = fileSArray.length - 1;
 		}
 	}
 }
+
+
+// Function for Tabs and Tab Content
+$(document).ready(function() {
+	$('.tabs .tab-links a').on('click', function(e) {
+		var currentAttrValue = $(this).attr('href');
+
+	  // Show/Hide Tab Content
+	 	$('.tabs ' + currentAttrValue).show().siblings().hide();
+
+	  // Change current tab to active
+	 	$(this).parent('li').addClass('active').siblings().removeClass('active');
+
+	 	if (currentAttrValue == "#changelog") {
+	 	  // Load Changelog from textfile
+			$.get('changelog.txt', function(data) {
+
+				data = data.replace(/\/\//, "<p>");
+				data = data.replace(/\n\/\/ /g, "</p><p>");
+				data = data + "</p>";
+				data = data.replace(/\n/g, "<br>");
+
+			  // Stylize version text
+				data = data.replace(/Version.*/g, function(matched) { return '<span class="version">' + matched + '</span>'; });
+
+			  // Paste text data and reverse order of paragraphs
+				$('div#changelog-content').html(data);
+				$('div#changelog-content').children().each(function(i, li) { $('div#changelog-content').prepend(li); })
+			});
+	 	}
+
+	 	e.preventDefault();
+	})
+})
+
 document.addEventListener('DOMContentLoaded', restore_options);
 document.querySelector('#save').addEventListener('click', save_options);
